# Tonewheel

./: .gitignore  .gitignore~  CMakeLists.txt  Makefile  README.md  Tonewheel.cbp  Tonewheel.depend  Tonewheel.layout  adsr.h  out.txt  perc_envelope.cpp  perc_envelope.h  tonewheel  tonewheel.cpp
Standalone_GUI/: .gitignore  fltk_test.cpp  makefile  makefile~  readme.md  test
Standalone_GUI/FL/: readme.txt
old/: tonewheel.cpp
old_stuff/: tonewheel_old_osc.cpp  tonewheel_perc_bad.cpp  tonewhell_no_reverb.cpp
src/: adsr.cpp  sc_reverb.c  sc_reverb.h  tonewheel.cpp
src/reverb/: circular_buffer.h  reverb.cpp  reverb.h
